--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "autoprefixer": "^9.8.6",
-    "frappe-charts": "^1.5.6",
     "luxon": "^1.25.0",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
-    "react-frappe-charts": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "victory": "^35.4.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
